Mantis ChangeLog

2004.08.xx  -  0.19.0xx

- 0004193: [bugtracker] Broaden the ldap features to work with Active Directory (alf)
- 0004133: [filters] "Summary stats are links to filters for view_all_bugs" feature is broken (jlatour)
- 0004268: [security] cross site scripting issue (jlatour)
- 0004267: [security] cross site scripting issue (jlatour)
- 0004266: [feature] Update project documentation file (Bastian Pfenningschmidt)
- 0004062: [security] Multiple Cross Site Scripting Vulnerabilities (vboctor)
- 0003371: [feature] CVS Integration - general source control integration implemented (vboctor)
- 0004137: [feature] Support a simple "view" URL (vboctor)
- 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
- 0004185: [customization] Support custom menu options (vboctor)
- 0003975: [email] Realname vs username in email history (thraxisp)
- 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
- 0003928: [filters] 'Copy Issue' was not copying attachments (narcissus)
- 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
- 0004073: [filters] Edit filter page now too wide. 'Apply filter' button is drawn off screen (narcissus)
- 0004093: [filters] Custom field values are a larger type size in view_all_bug_page (narcissus)
- 0004108: [filters] "Use Date Filters" in advanced filters (narcissus)
- 0004121: [filters] Filters saved while "All Projects" is the active project (narcissus)
- 0004125: [filters] In the advanced page, "any" should be selected by default for all search criteria (narcissus)
- 0004150: [filters] Custom field names are not localised in filters (vboctor)
- 0004183: [filters] HTML entities in search text (narcissus)
- 0004207: [filters] Mantis forgets user filter after logout (narcissus)
- 0004122: [relationships] Upgrade script seems to swap the duplicate relationship (masc)
- 0004146: [relationships] Summary doesn't unescape(?) characters (masc)