@@ -2,6 +2,7 @@ Mantis ChangeLog
 
 2004.08.xx  -  0.19.0xx
 
+- 0003689: [bugtracker] index.php is sending wrong HTTP header if not logged in (jlatour)
 - 0004193: [bugtracker] Broaden the ldap features to work with Active Directory (alf)
 - 0004133: [filters] "Summary stats are links to filters for view_all_bugs" feature is broken (jlatour)
 - 0004268: [security] cross site scripting issue (jlatour)
